--- a/exam/templates/exam/exam_form.html
+++ b/exam/templates/exam/exam_form.html
@@ -11,6 +11,6 @@
         {{form.as_p}}
         <input type="submit">
     </form>
-    <a href="{% url 'hello'%}">go</a>
+    <a href="{% url 'hello'%}">home</a>
 </body>
 </html>
