--- a/exam/templates/exam/home.html
+++ b/exam/templates/exam/home.html
@@ -26,6 +26,7 @@
     <a href="{% url 'exam' %}">Exam Page</a><br>
     <a href="{% url 'timetable'%}">Time table</a><br>
     <a href="{% url 'dutyAllotment'%}">Duty Allotment</a><br>
-    <a href="{% url 'preferTable'%}">Prefer Table</a>
+    <a href="{% url 'preferTable'%}">Prefer Table</a><br>
+    <a href="{% url 'course'%}">course</a>
 </body>
 </html>
