--- a/exam/templates/exam/home.html
+++ b/exam/templates/exam/home.html
@@ -24,9 +24,10 @@
 <body>
     <h1>WELCOME</h1>
     <a href="{% url 'exam' %}">Exam Page</a><br>
-    <a href="{% url 'timetable'%}">Time table</a><br>
+    <a href="{% url 'cpage'%}">Time table</a><br>
     <a href="{% url 'dutyAllotment'%}">Duty Allotment</a><br>
     <a href="{% url 'preferTable'%}">Prefer Table</a><br>
     <a href="{% url 'course'%}">course</a>
+    
 </body>
 </html>
